--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://raw.githubusercontent.com/twitter/twemoji/master/assets/svg/1f9e0.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>KonwHub - 知识问答社区</title>
+    <title>KnowHub - 知识问答社区</title>
   </head>
   <body>
     <div id="app"></div>
